src/objects/Im_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Agencies_notified__c</fullName>
        <label>What external parties were notified?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agencies_notified_narrative__c</fullName>
        <label>External Parties Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Level_Explanation__c</fullName>
        <label>Calculated Level Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Level__c</fullName>
        <label>Calculated Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Documented__c</fullName>
        <label>Date Documented</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Level_Reason__c</fullName>
        <label>Final Level Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Level__c</fullName>
        <label>Final Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>The event Identifier - Auto Number</description>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Incident_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Reviewer</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Im_Incidents (Incident Reviewer)</relationshipLabel>
        <relationshipName>Im_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investigation_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notified_Staff__c</fullName>
        <label>Who else on staff was notified?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the id of the initial event... need to populated it on the copy of the reported event that the qualifier will work on.</description>
        <label>Im_Incident</label>
        <referenceTo>Im_Incident__c</referenceTo>
        <relationshipLabel>ReportedEvent</relationshipLabel>
        <relationshipName>Im_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By/Documented By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Im_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Plan_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Plan Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Associated to Event</label>
        <referenceTo>Service_Location__c</referenceTo>
        <relationshipLabel>Im_Incidents</relationshipLabel>
        <relationshipName>Im_Incidents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Event-Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Event-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-Disregarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-Qualifying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident-Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident-Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident-Disregarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident-Ready for Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <formula>Supervisor__r.Name</formula>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Im_Incidents (Supervisor)</relationshipLabel>
        <relationshipName>Supervised_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_for_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Not required if Supervisor field is the same.</description>
        <inlineHelpText>Not required if Supervisor field is the same.</inlineHelpText>
        <label>Supervisor for Location</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Im_Incidents (Supervisor for Location)</relationshipLabel>
        <relationshipName>LocationSupervisorIncidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_Happened__c</fullName>
        <label>What Happened?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_did_it_happen__c</fullName>
        <label>When did it happen?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>When_was_the_Supervisor_notified__c</fullName>
        <label>When was the Supervisor notified?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Where_did_it_happen__c</fullName>
        <label>Where did it happen?</label>
        <picklist>
            <picklistValues>
                <fullName>Residence of Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biological Family/Guardian Home of Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respite Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of Employment of Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eSigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eSigned By</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Im_Incidents (eSigned By)</relationshipLabel>
        <relationshipName>Incidents_eSigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eSigned_Time__c</fullName>
        <label>eSigned Time</label>
        <type>DateTime</type>
    </fields>
    <label>Im_Incident</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Im_Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>